# qwicks

./: .gitignore  README.md  dashboard.py  electron-builder.config.cjs  electron.vite.config.ts  eslint.config.js  mimo_mcp_server.py  package-lock.json  package.json  pyproject.toml  start-teamflow-v2.ps1  tsconfig.web.json
.tools/: test.sh  typecheck.sh
docs/: ALIYUN_AUTO_UPDATE.md  hot-update-rollback-manual.md  mqpet-source-resource-map.md  release-and-update-strategy.md  workspace-classification.md
kun/: package-lock.json  package.json  tsconfig.json
qwicks/: README.md  README.zh-CN.md  config.example.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
scripts/: after-pack.cjs  build-teamflow-desktop.ps1  classify-release-change.cjs  compute-ci-release-version.cjs  compute-update-version.cjs  ensure-qwicks-install.cjs  generate-mac-latest.cjs  generate-release-notes.cjs  github-upload.sh  mac-notarize.cjs  mac-unquarantine.sh  make-placeholder-pet-atlas.cjs  postinstall.cjs  prepare-tauri-sidecar.ps1  publish-r2.mjs  release-mac.sh  release-win.ps1  release-win.sh  release.local.env.example  stage-release-assets.ps1  start-claude-interactive.ps1  start-claude-worker-pane.ps1  start-codex-pane.ps1  start-dashboard-pane.ps1  start-dashboard-rich.ps1  start-teamflow-desktop.ps1  start-teamflow-warp-legacy.ps1  teamflow-env.ps1  write-code-update-json.cjs  zip-mac-app.cjs  (+1 more)
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/teamflow-mcp/: Cargo.toml
src-tauri/teamflow-mcp/src/: lib.rs  main.rs
(+1136 files in other folders)
