[package]
name = "teamflow-desktop"
version = "0.1.0"
description = "Teamflow Desktop local agent workflow studio"
authors = ["Teamflow"]
edition = "2021"
autobins = false

[lib]
name = "teamflow_core"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "teamflow-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
single-instance = "0.3"
tauri = { version = "2.5", features = [] }
thiserror = "1"
tokio = { version = "1", features = ["net", "sync", "rt-multi-thread"] }
tokio-tungstenite = "0.29"
uuid = { version = "1", features = ["v4"] }
winreg = "0.55"
