[package]
name = "teamflow-mcp"
version = "0.1.0"
edition = "2021"
description = "Teamflow Desktop MCP sidecar"

[[bin]]
name = "teamflow-mcp"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
